--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/*************************TAG Selectors*******************/
+
 body {
     background-color: powderblue;
   }
@@ -17,4 +19,11 @@ h1 {
 
 h3 {
     color: rgb(6, 66, 103);
+}
+
+/***************************CLASS SELECTORS***************/
+
+/***************************ID SELECTORS***************/
+#my-image{
+    border-radius: 100%;
 }
