--- a/css/styles.css
+++ b/css/styles.css
@@ -1,41 +1,75 @@
 /*************************TAG Selectors*******************/
 body {
+    color: #40514E;
     margin: 0;
     text-align: center;
     font-family: 'Merriweather', serif;
 }
 
 h1 {
-    margin-top: 0;
+    color: #66BFBF;
+
+    font-size: 5.625rem;
     font-family: 'Sacramento', cursive;
+
+    margin: 50px auto 0 auto;
+    
 }
 
 h2 {
+    color: #66BFBF;
+
     font: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    font-weight: normal;
+    
+    padding-bottom: 10px;
+
 }
 
 h3 {
+    color: #11999E;
     font: 'Montserrat', sans-serif;
+}
+
+a {
+    color: #11999E;
+    text-decoration: none;
+}
+
+a:hover{
+    color: #EAF6F6
+}
+
+hr {
+    border-style: none;
+    border-top-style: dotted;
+    border-width: 5px;
+    border-color: #c7cfcf;
+    height: 0px;
+    width: 5%;
+    margin: 5rem auto;
+}
+
+p {
+    line-height: 2;
 }
 
 /***************************CLASS SELECTORS***************/
 .top-container {
-    background-color: rgb(200, 243, 243);
+    background-color: rgb(214, 244, 244);
+
     position: relative;
     padding-top: 100px;
-    /* border: solid;
-    border-width: 10px;
-    height: 200px;
-    padding: 20px;
-    width: 200px; */
 }
 
 .middle-container {
-
+    margin: 100px 0;
 }
 
 .bottom-container {
-
+    background-color: #66BFBF;
+    padding: 50px 0 20px;
 }
 
 .pro {
@@ -45,14 +79,96 @@ h3 {
 .top-cloud {
     position: absolute;
     right: 300px;
-    top: 50px;
+    top: 40px;
 }
 
 .bottom-cloud {
     position: absolute;
-    left: 300px;
+    left: 250px;
     bottom: 300px;
 }
 
+.skill-row {
+    margin: 100px auto;
+    width: 60%;
+    text-align: left;
+}
 
+.programming-img {
+    float: left;
+    margin-right: 30px;
+    width: 35%;
+    
+}
+
+.computer-img {
+    float: right;
+    margin-left: 30px;
+    width: 25%;
+}
+
+.btn {
+    
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: 'Montserrat', sans-serif;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+.btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+  }
+
+.intro {
+    width: 30%;
+    line-height: 2;
+    margin: auto;
+}
+
+.bottom-header{
+    line-height: 2;
+}
+
+.copyright {
+    color: #EAF6F6;
+    font-size: 0.75rem;
+    padding: 15px 0 10px;
+}
+
+.contact-me{
+    height: 300px;
+    margin-bottom: 0;
+}
+
+.contact-message{
+    line-height: 2;
+    width: 40%;
+    margin: 40px auto 60px;
+}
+
+.footer-link {
+    margin: 10px 20px;
+    font-family: "Montserrat", sans-serif;
+}
 /***************************ID SELECTORS***************/
+#my-image{
+    border-radius: 100%;
+    height: 16rem;
+    width: 16rem;
+}
